--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
   "author": "Remco Troost",
   "license": "MIT",
   "private": true,
-  "scripts": {"start": "node app.js"},
+  "scripts": {
+    "start": "node app.js"
+  },
   "dependencies": {
-    "tmi.js": "^1.2.1"
+    "tmi.js": "^1.2.1",
+    "winston": "^2.3.1"
   }
 }
