--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "start": "node app.js"
   },
   "dependencies": {
+    "body-parser": "^1.17.2",
+    "express": "^4.15.3",
+    "method-override": "^2.3.9",
+    "morgan": "^1.8.2",
+    "pug": "^2.0.0-rc.2",
     "tmi.js": "^1.2.1",
     "winston": "^2.3.1"
   }
