--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "body-parser": "^1.17.2",
+    "discord.js": "^11.1.0",
     "express": "^4.15.3",
     "method-override": "^2.3.9",
     "morgan": "^1.8.2",
