--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "passport-local": "^1.0.0",
     "promise": "^8.0.1",
     "pug": "^2.0.0-rc.2",
+    "request": "^2.81.0",
     "socket.io": "^2.0.3",
     "tmi.js": "^1.2.1",
     "winston": "^2.3.1"
