--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "start": "node app.js"
+    "start": "gulp serve"
   },
   "dependencies": {
     "bcryptjs": "^2.4.3",
@@ -15,6 +15,7 @@
     "cachegoose": "^3.0.2",
     "connect-ensure-login": "^0.1.1",
     "connect-flash": "^0.1.1",
+    "connect-mongodb-session": "^1.3.0",
     "discord.js": "^11.1.0",
     "express": "^4.15.3",
     "express-messages": "^1.0.1",
@@ -22,14 +23,26 @@
     "method-override": "^2.3.9",
     "mongoose": "^4.11.3",
     "mongoose-cache-manager": "github:englercj/mongoose-cache-manager",
+    "mongoose-long": "^0.1.1",
     "morgan": "^1.8.2",
     "passport": "^0.3.2",
     "passport-local": "^1.0.0",
     "promise": "^8.0.1",
     "pug": "^2.0.0-rc.2",
     "request": "^2.81.0",
+    "serve-favicon": "^2.4.3",
     "socket.io": "^2.0.3",
     "tmi.js": "^1.2.1",
     "winston": "^2.3.1"
+  },
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^4.0.0",
+    "gulp-jshint": "^2.0.4",
+    "gulp-livereload": "^3.8.1",
+    "gulp-nodemon": "^2.2.1",
+    "gulp-postcss": "^7.0.0",
+    "jshint": "^2.9.5",
+    "jshint-stylish": "^2.2.1"
   }
 }
